--- a/index.html
+++ b/index.html
@@ -44,95 +44,95 @@
 
     <h1>HTML Ödevleri İçerik Listesi</h1>
 
-    <a href="hafta1rnek1.htm">Hafta 1-2: Örnek 1</a><br>
-    <a href="hafta1rnek2.htm">Hafta 1-2: Örnek 2</a><br>
-    <a href="hafta1rnek3.htm">Hafta 1-2: Örnek 3</a><br>
-    <a href="hafta1rnek4.htm">Hafta 1-2: Örnek 4</a><br>
+    <a href="hafta1örnek1.htm">Hafta 1-2: Örnek 1</a><br>
+    <a href="hafta1örnek2.htm">Hafta 1-2: Örnek 2</a><br>
+    <a href="hafta1örnek3.htm">Hafta 1-2: Örnek 3</a><br>
+    <a href="hafta1örnek4.htm">Hafta 1-2: Örnek 4</a><br>
 
-    <a href="hafta3rnek1.htm">Hafta 3: Örnek 1</a><br>
-    <a href="hafta3rnek2.htm">Hafta 3: Örnek 2</a><br>
-    <a href="hafta3rnek3.htm">Hafta 3: Örnek 3</a><br>
-    <a href="hafta3rnek4.htm">Hafta 3: Örnek 4</a><br>
-    <a href="hafta3rnek5.htm">Hafta 3: Örnek 5</a><br>
+    <a href="hafta3örnek1.htm">Hafta 3: Örnek 1</a><br>
+    <a href="hafta3örnek2.htm">Hafta 3: Örnek 2</a><br>
+    <a href="hafta3örnek3.htm">Hafta 3: Örnek 3</a><br>
+    <a href="hafta3örnek4.htm">Hafta 3: Örnek 4</a><br>
+    <a href="hafta3örnek5.htm">Hafta 3: Örnek 5</a><br>
 
-    <a href="hafta4rnek1.htm">Hafta 4: Örnek 1</a><br>
-    <a href="hafta4rnek2.htm">Hafta 4: Örnek 2</a><br>
-    <a href="hafta4rnek3.htm">Hafta 4: Örnek 3</a><br>
-    <a href="hafta4rnek4.htm">Hafta 4: Örnek 4</a><br>
-    <a href="hafta4rnek5.htm">Hafta 4: Örnek 5</a><br>
-    <a href="hafta4rnek6.htm">Hafta 4: Örnek 6</a><br>
-    <a href="hafta4rnek7..html">Hafta 4: Örnek 7</a><br>
+    <a href="hafta4örnek1.htm">Hafta 4: Örnek 1</a><br>
+    <a href="hafta4örnek2.htm">Hafta 4: Örnek 2</a><br>
+    <a href="hafta4örnek3.htm">Hafta 4: Örnek 3</a><br>
+    <a href="hafta4örnek4.htm">Hafta 4: Örnek 4</a><br>
+    <a href="hafta4örnek5.htm">Hafta 4: Örnek 5</a><br>
+    <a href="hafta4örnek6.htm">Hafta 4: Örnek 6</a><br>
+    <a href="hafta4örnek7..html">Hafta 4: Örnek 7</a><br>
 
-    <a href="hafta5rnek1.htm">Hafta 5: Örnek 1</a><br>
-    <a href="hafta5rnek2.htm">Hafta 5: Örnek 2</a><br>
-    <a href="hafta5rnek3.htm">Hafta 5: Örnek 3</a><br>
-    <a href="hafta5rnek4.htm">Hafta 5: Örnek 4</a><br>
-    <a href="hafta5rnek5.htm">Hafta 5: Örnek 5</a><br>
+    <a href="hafta5örnek1.htm">Hafta 5: Örnek 1</a><br>
+    <a href="hafta5örnek2.htm">Hafta 5: Örnek 2</a><br>
+    <a href="hafta5örnek3.htm">Hafta 5: Örnek 3</a><br>
+    <a href="hafta5örnek4.htm">Hafta 5: Örnek 4</a><br>
+    <a href="hafta5örnek5.htm">Hafta 5: Örnek 5</a><br>
 
-    <a href="hafta6rnek1.htm">Hafta 6: Örnek 1</a><br>
-    <a href="hafta6rnek2.htm">Hafta 6: Örnek 2</a><br>
-    <a href="hafta6rnek3.htm">Hafta 6: Örnek 3</a><br>
-    <a href="hafta6rnek4.htm">Hafta 6: Örnek 4</a><br>
-    <a href="hafta6rnek5.htm">Hafta 6: Örnek 5</a><br>
-    <a href="hafta6rnek6.htm">Hafta 6: Örnek 6</a><br>
-    <a href="hafta6rnek7.htm">Hafta 6: Örnek 7</a><br>
-    <a href="hafta6rnek8.htm">Hafta 6: Örnek 8</a><br>
+    <a href="hafta6örnek1.htm">Hafta 6: Örnek 1</a><br>
+    <a href="hafta6örnek2.htm">Hafta 6: Örnek 2</a><br>
+    <a href="hafta6örnek3.htm">Hafta 6: Örnek 3</a><br>
+    <a href="hafta6örnek4.htm">Hafta 6: Örnek 4</a><br>
+    <a href="hafta6örnek5.htm">Hafta 6: Örnek 5</a><br>
+    <a href="hafta6örnek6.htm">Hafta 6: Örnek 6</a><br>
+    <a href="hafta6örnek7.htm">Hafta 6: Örnek 7</a><br>
+    <a href="hafta6örnek8.htm">Hafta 6: Örnek 8</a><br>
 
- <a href="hafta7rnek1.htm">Hafta 7: Örnek 1</a><br>
- <a href="hafta7rnek2.htm">Hafta 7: Örnek 2</a><br>
- <a href="hafta7rnek3.htm">Hafta 7: Örnek 3</a><br>
- <a href="hafta7rnek4.htm">Hafta 7: Örnek 4</a><br>
- <a href="hafta7rnek5.htm">Hafta 7: Örnek 5</a><br>
- <a href="hafta7rnek6.htm">Hafta 7: Örnek 6</a><br>
- <a href="hafta7rnek7.htm">Hafta 7: Örnek 7</a><br>
- <a href="hafta7rnek8.htm">Hafta 7: Örnek 8</a><br>
- <a href="hafta7rnek9.htm">Hafta 7: Örnek 9</a><br>
- <a href="hafta7rnek10.htm">Hafta 7: Örnek 10</a><br>
- <a href="hafta7rnek11.htm">Hafta 7: Örnek 11</a><br>
- <a href="hafta7rnek12.htm">Hafta 7: Örnek 12</a><br>
- <a href="hafta7rnek13.htm">Hafta 7: Örnek 13</a><br>
- <a href="hafta7rnek14.htm">Hafta 7: Örnek 14</a><br>
- <a href="hafta7rnek15.htm">Hafta 7: Örnek 15</a><br>
- <a href="hafta7rnek16.htm">Hafta 7: Örnek 16</a><br>
- <a href="hafta7rnek17.htm">Hafta 7: Örnek 17</a><br>
- <a href="hafta7rnek18.htm">Hafta 7: Örnek 18</a><br>
- <a href="hafta7rnek19.htm">Hafta 7: Örnek 19</a><br>
- <a href="hafta7rnek20.htm">Hafta 7: Örnek 20</a><br>
- <a href="hafta7rnek21.htm">Hafta 7: Örnek 21</a><br>
- <a href="hafta7rnek22.htm">Hafta 7: Örnek 22</a><br>
- <a href="hafta7rnek23.htm">Hafta 7: Örnek 23</a><br>
- <a href="hafta7rnek24.htm">Hafta 7: Örnek 24</a><br>
- <a href="hafta7rnek25.htm">Hafta 7: Örnek 25</a><br>
- <a href="hafta7rnek26.htm">Hafta 7: Örnek 26</a><br>
- <a href="hafta7rnek27.htm">Hafta 7: Örnek 26</a><br>
- <a href="hafta7rnek28.htm">Hafta 7: Örnek 27</a><br>
- <a href="hafta7rnek29.htm">Hafta 7: Örnek 28</a><br>
- <a href="hafta7rnek29.htm">Hafta 7: Örnek 29</a><br>
- <a href="hafta7rnek30.htm">Hafta 7: Örnek 30</a><br>
- <a href="hafta7rnek31.htm">Hafta 7: Örnek 31</a><br>
- <a href="hafta7rnek32.htm">Hafta 7: Örnek 32</a><br>
- <a href="hafta7rnek33.htm">Hafta 7: Örnek 33</a><br>
- <a href="hafta7rnek34.htm">Hafta 7: Örnek 34</a><br>
- <a href="hafta7rnek35.htm">Hafta 7: Örnek 35</a><br>
- <a href="hafta7rnek36.htm">Hafta 7: Örnek 36</a><br>
- <a href="hafta7rnek37.htm">Hafta 7: Örnek 37</a><br>
- <a href="hafta7rnek38.htm">Hafta 7: Örnek 38</a><br>
- <a href="hafta7rnek39.htm">Hafta 7: Örnek 39</a><br>
- <a href="hafta7rnek40.htm">Hafta 7: Örnek 40</a><br>
- <a href="hafta7rnek41.htm">Hafta 7: Örnek 41</a><br>
- <a href="hafta7rnek42.htm">Hafta 7: Örnek 42</a><br>
- <a href="hafta7rnek43.htm">Hafta 7: Örnek 43</a><br>
- <a href="hafta7rnek44.htm">Hafta 7: Örnek 44</a><br>
- <a href="hafta7rnek45.htm">Hafta 7: Örnek 45</a><br>
- <a href="hafta7rnek46.htm">Hafta 7: Örnek 46</a><br>
- <a href="hafta7rnek47.htm">Hafta 7: Örnek 47</a><br>
- <a href="hafta7rnek48.htm">Hafta 7: Örnek 48</a><br>
- <a href="hafta7rnek49.htm">Hafta 7: Örnek 49</a><br>
+ <a href="hafta7örnek1.htm">Hafta 7: Örnek 1</a><br>
+ <a href="hafta7örnek2.htm">Hafta 7: Örnek 2</a><br>
+ <a href="hafta7örnek3.htm">Hafta 7: Örnek 3</a><br>
+ <a href="hafta7örnek4.htm">Hafta 7: Örnek 4</a><br>
+ <a href="hafta7örnek5.htm">Hafta 7: Örnek 5</a><br>
+ <a href="hafta7örnek6.htm">Hafta 7: Örnek 6</a><br>
+ <a href="hafta7örnek7.htm">Hafta 7: Örnek 7</a><br>
+ <a href="hafta7örnek8.htm">Hafta 7: Örnek 8</a><br>
+ <a href="hafta7örnek9.htm">Hafta 7: Örnek 9</a><br>
+ <a href="hafta7örnek10.htm">Hafta 7: Örnek 10</a><br>
+ <a href="hafta7örnek11.htm">Hafta 7: Örnek 11</a><br>
+ <a href="hafta7örnek12.htm">Hafta 7: Örnek 12</a><br>
+ <a href="hafta7örnek13.htm">Hafta 7: Örnek 13</a><br>
+ <a href="hafta7örnek14.htm">Hafta 7: Örnek 14</a><br>
+ <a href="hafta7örnek15.htm">Hafta 7: Örnek 15</a><br>
+ <a href="hafta7örnek16.htm">Hafta 7: Örnek 16</a><br>
+ <a href="hafta7örnek17.htm">Hafta 7: Örnek 17</a><br>
+ <a href="hafta7örnek18.htm">Hafta 7: Örnek 18</a><br>
+ <a href="hafta7örnek19.htm">Hafta 7: Örnek 19</a><br>
+ <a href="hafta7örnek20.htm">Hafta 7: Örnek 20</a><br>
+ <a href="hafta7örnek21.htm">Hafta 7: Örnek 21</a><br>
+ <a href="hafta7örnek22.htm">Hafta 7: Örnek 22</a><br>
+ <a href="hafta7örnek23.htm">Hafta 7: Örnek 23</a><br>
+ <a href="hafta7örnek24.htm">Hafta 7: Örnek 24</a><br>
+ <a href="hafta7örnek25.htm">Hafta 7: Örnek 25</a><br>
+ <a href="hafta7örnek26.htm">Hafta 7: Örnek 26</a><br>
+ <a href="hafta7örnek27.htm">Hafta 7: Örnek 26</a><br>
+ <a href="hafta7örnek28.htm">Hafta 7: Örnek 27</a><br>
+ <a href="hafta7örnek29.htm">Hafta 7: Örnek 28</a><br>
+ <a href="hafta7örnek29.htm">Hafta 7: Örnek 29</a><br>
+ <a href="hafta7örnek30.htm">Hafta 7: Örnek 30</a><br>
+ <a href="hafta7örnek31.htm">Hafta 7: Örnek 31</a><br>
+ <a href="hafta7örnek32.htm">Hafta 7: Örnek 32</a><br>
+ <a href="hafta7örnek33.htm">Hafta 7: Örnek 33</a><br>
+ <a href="hafta7örnek34.htm">Hafta 7: Örnek 34</a><br>
+ <a href="hafta7örnek35.htm">Hafta 7: Örnek 35</a><br>
+ <a href="hafta7örnek36.htm">Hafta 7: Örnek 36</a><br>
+ <a href="hafta7örnek37.htm">Hafta 7: Örnek 37</a><br>
+ <a href="hafta7örnek38.htm">Hafta 7: Örnek 38</a><br>
+ <a href="hafta7örnek39.htm">Hafta 7: Örnek 39</a><br>
+ <a href="hafta7örnek40.htm">Hafta 7: Örnek 40</a><br>
+ <a href="hafta7örnek41.htm">Hafta 7: Örnek 41</a><br>
+ <a href="hafta7örnek42.htm">Hafta 7: Örnek 42</a><br>
+ <a href="hafta7örnek43.htm">Hafta 7: Örnek 43</a><br>
+ <a href="hafta7örnek44.htm">Hafta 7: Örnek 44</a><br>
+ <a href="hafta7örnek45.htm">Hafta 7: Örnek 45</a><br>
+ <a href="hafta7örnek46.htm">Hafta 7: Örnek 46</a><br>
+ <a href="hafta7örnek47.htm">Hafta 7: Örnek 47</a><br>
+ <a href="hafta7örnek48.htm">Hafta 7: Örnek 48</a><br>
+ <a href="hafta7örnek49.htm">Hafta 7: Örnek 49</a><br>
 
-    <a href="hafta8rnek1.html">Hafta 8: Örnek 1</a><br>
-    <a href="hafta8rnek2.htm">Hafta 8: Örnek 2</a><br>
-    <a href="hafta8rnek3.htm">Hafta 8: Örnek 3</a><br>
-    <a href="hafta8rnek4.htm">Hafta 8: Örnek 4</a><br>
+    <a href="hafta8örnek1.html">Hafta 8: Örnek 1</a><br>
+    <a href="hafta8örnek2.htm">Hafta 8: Örnek 2</a><br>
+    <a href="hafta8örnek3.htm">Hafta 8: Örnek 3</a><br>
+    <a href="hafta8örnek4.htm">Hafta 8: Örnek 4</a><br>
     <a href="hafta8örnek5.htm">Hafta 8: Örnek 5</a><br>
     <a href="hafta8örnek6.htm">Hafta 8: Örnek 6</a><br>
     <a href="hafta8örnek7.htm">Hafta 8: Örnek 7</a><br>
