--- a/hafta4örnek7..htm
+++ b/hafta4örnek7..htm
@@ -7,12 +7,13 @@
 <p> 
 <strong>çerçeveli buton</strong ><br> 
 <a href="about.html"> 
-<img src="BUT.jpg" alt= "About Button" border= "1"  height="55" width= "55"> 
+<img src="civciv.jpg" alt= "About Button" border= "1"  height="55" width= "55"> 
 </a> 
 <br><br> 
 <strong>çerçevesiz buton</strong> <br> 
-<a href="about.html"><img src="BUT.jpg" alt="About Button" border= "0" height= 
+<a href="about.html"><img src="civciv.jpg" alt="About Button" border= "0" height= 
 "55" width= "55"> </a> 
 </p> 
 </body> 
+
 </html>
