--- a/hafta5örnek1.htm
+++ b/hafta5örnek1.htm
@@ -4,6 +4,7 @@
 </head>
 <body>
 <h2 align="center">Görüntü Temelleri</h2>
-<img src="d:/belgelerim/Resimlerim/civciv.jpg" width="150" height="250" border="1">
+<img src="civciv.jpg" width="150" height="250" border="1">
 </body>
+
 </html>
