--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <a href="hafta4örnek4.htm">Hafta 4: Örnek 4</a><br>
     <a href="hafta4örnek5.htm">Hafta 4: Örnek 5</a><br>
     <a href="hafta4örnek6.htm">Hafta 4: Örnek 6</a><br>
-    <a href="hafta4örnek7..html">Hafta 4: Örnek 7</a><br>
+    <a href="hafta4örnek7..htm">Hafta 4: Örnek 7</a><br>
 
     <a href="hafta5örnek1.htm">Hafta 5: Örnek 1</a><br>
     <a href="hafta5örnek2.htm">Hafta 5: Örnek 2</a><br>
