--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
     <a href="hafta8örnek7.htm">Hafta 8: Örnek 7</a><br>
     <a href="hafta8örnek8.htm">Hafta 8: Örnek 8</a><br>
     <a href="hafta8örnek9.htm">Hafta 8: Örnek 9</a><br>
-    <a href="hafta8örnek10.html">Hafta 8: Örnek 10</a><br>
-    <a href="hafta8örnek11.html">Hafta 8: Örnek 11</a><br>
-    <a href="hafta8örnek12.html">Hafta 8: Örnek 12</a><br>
-    <a href="hafta8örnek13.html">Hafta 8: Örnek 13</a><br>
+    <a href="hafta8örnek10.htm">Hafta 8: Örnek 10</a><br>
+    <a href="hafta8örnek11.htm">Hafta 8: Örnek 11</a><br>
+    <a href="hafta8örnek12.htm">Hafta 8: Örnek 12</a><br>
+    <a href="hafta8örnek13.htm">Hafta 8: Örnek 13</a><br>
 
     <a href="hafta9101112örnek1.html">Hafta 9-11: Örnek 1</a><br>
 <a href="hafta9101112örnek2.html">Hafta 9-11: Örnek 2</a><br>
