--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
  <a href="hafta7örnek48.htm">Hafta 7: Örnek 48</a><br>
  <a href="hafta7örnek49.htm">Hafta 7: Örnek 49</a><br>
 
-    <a href="hafta8örnek1.html">Hafta 8: Örnek 1</a><br>
+    <a href="hafta8örnek1.htm">Hafta 8: Örnek 1</a><br>
     <a href="hafta8örnek2.htm">Hafta 8: Örnek 2</a><br>
     <a href="hafta8örnek3.htm">Hafta 8: Örnek 3</a><br>
     <a href="hafta8örnek4.htm">Hafta 8: Örnek 4</a><br>
