--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
 <a href="hafta9101112örnek16.html">Hafta 9-11: Örnek 16</a><br>
 <a href="hafta9101112örnek17.html">Hafta 9-11: Örnek 17</a><br>
 
-    <a href="hafta12ornek1.htm">Hafta 12: Örnek 1</a><br>
-    <a href="hafta12ornek2.htm">Hafta 12: Örnek 2</a><br>
+    <a href="hafta12örnek1.htm">Hafta 12: Örnek 1</a><br>
+    <a href="hafta12örnek2.htm">Hafta 12: Örnek 2</a><br>
    
 
    <a href="hafta1314ornek1.html">Hafta 13-14: Örnek 1</a><br>
