--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 <a href="hafta1314ornek20.html">Hafta 13-14: Örnek 20</a><br>
 <a href="hafta1314ornek21.html">Hafta 13-14: Örnek 21</a><br>
 <a href="hafta1314ornek22.html">Hafta 13-14: Örnek 22</a><br>
-<a href="hafta1314ornek23.html">Hafta 13-14: Örnek 23</a><br>
+<a href="hafta1314ornek23.htm">Hafta 13-14: Örnek 23</a><br>
 <a href="hafta1314ornek24.html">Hafta 13-14: Örnek 24</a><br>
 
 </body>
