--- a/hafta8örnek2.htm
+++ b/hafta8örnek2.htm
@@ -1,12 +1,13 @@
 <html>
 <head>
 </head>
-<frameset cols="200,*">
-<frameset rows="100,*">
-<frame name"a"src="örnek1.htm">
-<frame name"b"src="örnek2.htm">
+<frameset cols="100,*">
+<frame name="cer1"src="örnek1.htm"border=10 frameborder=1 bordercolor="red">
+<frame name="cer2"src="örnek2.htm"border=10 frameborder=1 bordercolor="pink">
+<frame rows="*,*">
+<frame name="cer3"src="örnek3.htm"border=10 frameborder=1 bordercolor="green">
 <noframes>
 </noframes>
 </frameset>
-
+</frameset>
 </html>
