--- a/örnek1.htm
+++ b/örnek1.htm
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
-<img src="d:\belgelerim\resimlerim\resim.jpeg"height="200"width="200"align="center">
+<img src="resim.jpeg"height="200"width="200"align="center">
 </body>
+
 </html>
