--- a/hafta8örnek3.htm
+++ b/hafta8örnek3.htm
@@ -1,13 +1,11 @@
 <html>
 <head>
 </head>
-<frameset cols="100,*">
-<frame name="cer1"src="örnek1.htm"border=10 frameborder=1 bordercolor="red">
-<frame name="cer2"src="örnek2.htm"border=10 frameborder=1 bordercolor="pink">
-<frame rows="*,*">
-<frame name="cer3"src="örnek3.htm"border=10 frameborder=1 bordercolor="green">
-<noframes>
-</noframes>
+<frameset rows="100,*,*">
+<frame name="cer1" src="örnek1.htm" border=10 frameborder=1 bordercolor="red" scrolling="yes">
+<frame name="cer2" src="örnek2.htm" border=10 frameborder=1 bordercolor="green" scrolling="yes">
+<frame name="cer3" src="örnek3.htm" border=10 frameborder=1 bordercolor="yellow" scrolling="yes">
+<frame name="cer4" src="örnek4.htm" border=10 frameborder=1 bordercolor="black" scrolling="yes">
 </frameset>
 </frameset>
 </html>
