--- a/hafta8örnek4.htm
+++ b/hafta8örnek4.htm
@@ -1,11 +1,12 @@
 <html>
 <head>
 </head>
-<frameset rows="100,*,*">
-<frame name="cer1" src="örnek1.htm" border=10 frameborder=1 bordercolor="red" scrolling="yes">
-<frame name="cer2" src="örnek2.htm" border=10 frameborder=1 bordercolor="green" scrolling="yes">
-<frame name="cer3" src="örnek3.htm" border=10 frameborder=1 bordercolor="yellow" scrolling="yes">
-<frame name="cer4" src="örnek4.htm" border=10 frameborder=1 bordercolor="black" scrolling="yes">
+<frameset rows="100,*,2*">
+<frame name=cer1"src="örnek1.htm"border=10 frameborder=1>
+<frame name="cer2"src="örnek2.htm"border=10 frameborder=1>
+<frameset cols="2*,*">
+<framename="cer3"src="örnek3.htm"border=10 frameborder=1>
+<frame name="cer4"src="örnek4.htm"border=10 frameborder=1>
 </frameset>
 </frameset>
 </html>
