--- a/hafta8örnek4.htm
+++ b/hafta8örnek4.htm
@@ -2,7 +2,7 @@
 <head>
 </head>
 <frameset rows="100,*,2*">
-<frame name=cer1"src="örnek1.htm"border=10 frameborder=1>
+<frame name="cer1"src="örnek1.htm"border=10 frameborder=1>
 <frame name="cer2"src="örnek2.htm"border=10 frameborder=1>
 <frameset cols="2*,*">
 <framename="cer3"src="örnek3.htm"border=10 frameborder=1>
@@ -10,3 +10,4 @@
 </frameset>
 </frameset>
 </html>
+
