--- a/hafta8örnek6.htm
+++ b/hafta8örnek6.htm
@@ -1,10 +1,14 @@
 <html>
 <head>
 </head>
-<frameset rows="100,*,*,*">
-<frame name="cer1"src="örnek1.htm"border=5 frameborder=1 bordercolor="red" scrolling="yes" marginwidth=100 marginheight=110>
-<frame name="cer2"src="örnek2.htm"border=5 frameborder=1 bordercolor="pink" scrolling="yes" marginwidth=100 marginheight=110>
-<frame name="cer3"src="örnek3.htm"border=5 frameborder=1 bordercolor="blue" scrolling="yes" marginwidth=100 marginheight=110>
-<frame name="cer4"src="örnek4.htm"border=5 frameborder=1 bordercolor="gray" scrolling="yes" marginwidth=100 marginheight=110>
+<frameset cols="25%,25%,25%,25%">
+<frame name="co1"src="örnek1.htm"marginheight="5"marginwidth="5"noresize scrolling="no">
+<frame name="co2"src="örnek2.htm"marginheight="5"marginwidth="5"noresize scrolling="no">
+<frame name="co3"src="örnek3.htm"marginheight="5"marginwidth="5"noresize scrolling="no">
+<frame name="co4"src="örnek4.htm"marginheight="5"marginwidth="5"noresize scrolling="no">
+<noframes>
+<body>
+</body>
+</noframes>
 </frameset>
 </html>
