--- a/hafta8örnek8.htm
+++ b/hafta8örnek8.htm
@@ -1,14 +1,11 @@
 <html>
 <head>
 </head>
-<frameset rows="25%,25%,25%,25%">
-<frame name="co1" src="örnek1.htm"marginheight="5"marginwidth="5"noresize scrolling="no">
-<frame name="co2" src="örnek2.htm"marginheight="5"marginwidth="5"noresize scrolling="no">
-<frame name="co3" src="örnek3.htm"marginheight="5"marginwidth="5"noresize scrolling="no">
-<frame name="co4" src="örnek4.htm"marginheight="5"marginwidth="5"noresize scrolling="no">
-<noframes>
 <body>
+<h1 align="center">
+<iframe src="örnek2.htm" name=iframe" id="iframe1" width="250" height="150" align="right">
+merhaba
+</iframe>
+<p>kayan çerçeve örnekleri</p>
 </body>
-</noframes>
-</frameset>
 </html>
