--- a/hafta8örnek9.htm
+++ b/hafta8örnek9.htm
@@ -1,11 +1,19 @@
-<html>
-<head>
-</head>
-<body>
-<h1 align="center">
-<iframe src="örnek2.htm" name=iframe" id="iframe1" width="250" height="150" align="right">
-merhaba
-</iframe>
-<p>kayan çerçeve örnekleri</p>
-</body>
-</html>
+<html> 
+<head> 
+</head> 
+<body> 
+<h1 align ="center">konumlu katman </h1> 
+<layer id="layer" top="100" left="50" bgcolor="lightgreen"> 
+<h2>  bu bir tabaka  </h2> 
+<ul> 
+<li> tabaka değeri100,150 
+</ul> 
+</layer> 
+<layer id="layer2" top="180" left="250" bgcolor="green"> 
+<h2> bu bir başka tabaka</h2> 
+<ul> 
+<li> ikinci tabaka değeri 180,250 
+</ul> 
+</layer> 
+</body> 
+</html> 
