--- a/hafta12örnek1.htm
+++ b/hafta12örnek1.htm
@@ -6,7 +6,7 @@
 <body> 
 <h1 align= "center">  istemci görüntü haritaları</h1> 
 <div align= "center"> 
-<img src= "resim.jpg" usemap="#shapes" alt="shapes map" border= "0" 
+<img src= "günes.jpg" usemap="#shapes" alt="shapes map" border= "0" 
 width= "400"height= "200"> 
 </div> 
 <map name="shapes" id="shapes">  
@@ -18,4 +18,5 @@ href= "polygon.html" alt= "polygon">
 <area shape= "default" href= "or1.htm" alt=""> 
 </map> 
 </body> 
+
 </html>
