--- a/hafta5örnek2.htm
+++ b/hafta5örnek2.htm
@@ -3,8 +3,9 @@
 <title>görüntü hizalama</title>
 </head>
 <body>
-<p><img src="d:\belgelerim\resimlerim\günes.jpg"align="top"alt=""border="1">resim üst tarafta</p>
-<p><img src="d:\belgelerim\resimlerim\günes.jpg"align="middle"alt=""border="1">resim ortada</p>
-<p><img src="d:\belgelerim\resimlerim\günes.jpg"align="bottom"alt=""border="1">resim altta</p>
+<p><img src="günes.jpg"align="top"alt=""border="1">resim üst tarafta</p>
+<p><img src="günes.jpg"align="middle"alt=""border="1">resim ortada</p>
+<p><img src="günes.jpg"align="bottom"alt=""border="1">resim altta</p>
 </body>
+
 </html>
